--- a/src/MainContent.css
+++ b/src/MainContent.css
@@ -1,7 +1,13 @@
+.container-fluid {
+    padding-right: 0;
+    padding-left: 0;
+}
+
 .background-container {
     position: relative;
     width: 100%;
-    height: 91vh;
+    /* height: 91vh; */
+    height: 40rem;
     overflow: hidden;
 }
 
@@ -21,6 +27,6 @@
     left: 50%;
     transform: translate(-50%, -50%);
     z-index: 2;
-    width: 40%;
+    width: 35%;
     height: auto;
 }
