--- a/src/InfiniteSlider.css
+++ b/src/InfiniteSlider.css
@@ -7,6 +7,7 @@
 
 .infinite-slider-inner {
     display: flex;
+    width: 150%; /* Duplicamos la anchura para acomodar los slides duplicados */
     height: 100%;
 }
 
